# SagaPooExamen

./: CMakeLists.txt  README.md  main.cpp
Characters/: Enemigo.cpp  Enemigo.h  Entidad.cpp  Entidad.h  Jugador.cpp  Jugador.h  Personaje.cpp  Personaje.h
Habilidad/: boladefuego.cpp  boladefuego.h  curar.cpp  curar.h  habilidad.cpp  habilidad.h
Inventario/: inventario.cpp  inventario.h  item.cpp  item.h
